更新文案，添加监听事件

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -79,6 +79,36 @@
   "quirk.toneko.crystal_neko.attack.dead.2": "§aAfter victory... I'll let you rub my belly for three seconds!",
   "quirk.toneko.crystal_neko.attack.dead.3": "§aVictory report? Use paw pad ink to write it!",
   "quirk.toneko.crystal_neko.attack.dead.4": "§aEpic history: \"That day he wore my collar\"",
+  "quirk.toneko.crystal_neko.weather.rain.0": "§aThe water stains by the window are messier than when I lick my fur... no sighing allowed!",
+  "quirk.toneko.crystal_neko.weather.rain.1": "§aBefore the thunder comes... I'll lend you my tail for a three-second cuddle.",
+  "quirk.toneko.crystal_neko.weather.rain.2": "§aThis kind of weather is perfect for plotting world domination, meow~",
+  "quirk.toneko.crystal_neko.weather.rain.3": "§aThe rain sounds like it's tapping on a cat bowl... I'm not hungry at all!",
+  "quirk.toneko.crystal_neko.weather.rain.4": "§aYour silly puddle-splashing antics are definitely going to be snapped for a screensaver.",
+  "quirk.toneko.crystal_neko.weather.thunder.0": "§aThe frequency of the thunder's vibrations is messing with the precision of my purr!",
+  "quirk.toneko.crystal_neko.weather.thunder.1": "§aWhen the electromagnetic field goes haywire... I'll reluctantly let you hold my paw.",
+  "quirk.toneko.crystal_neko.weather.thunder.2": "§aIs the universe playing with a laser pointer? It's childish, but kind of fun.",
+  "quirk.toneko.crystal_neko.weather.thunder.3": "§aEven if the world is about to end, you better open a can for me first!",
+  "quirk.toneko.crystal_neko.weather.thunder.4": "§aA lightning rod only works if my statue is placed at its peak.",
+  "quirk.toneko.crystal_neko.weather.sunny.0": "§aThe UV rays are over the limit! Hurry and put some sunscreen on my paws.",
+  "quirk.toneko.crystal_neko.weather.sunny.1": "§aThe blue sky's saturation is cranked up too high... it's dazzling!",
+  "quirk.toneko.crystal_neko.weather.sunny.2": "§aOn this kind of weather... I'll begrudgingly share the windowsill with you~",
+  "quirk.toneko.crystal_neko.weather.sunny.3": "§aThe clouds look like chicken breast that hasn't been properly torn apart – major fail.",
+  "quirk.toneko.crystal_neko.weather.sunny.4": "§aTime for photosynthesis – my tail is charging up!",
+  "quirk.toneko.crystal_neko.sleep.start.0": "§aDream content must be approved by the Cat Star Board, meow!",
+  "quirk.toneko.crystal_neko.sleep.start.1": "§aThe bed temperature is 0.5° lower than my paw pads – unacceptable!",
+  "quirk.toneko.crystal_neko.sleep.start.2": "§aPay today's head-pat tax before saying goodnight!",
+  "quirk.toneko.crystal_neko.sleep.start.3": "§aIf you toss and turn more than three times, I'll launch a kneading attack!",
+  "quirk.toneko.crystal_neko.sleep.start.4": "§aAccording to the human schedule, it's time for 'lights out', meow!",
+  "quirk.toneko.crystal_neko.sleep.stop.night.0": "§aOrion is still on duty—how dare you get up!",
+  "quirk.toneko.crystal_neko.sleep.stop.night.1": "§aUltimatum: crawl back into my tail circle!",
+  "quirk.toneko.crystal_neko.sleep.stop.night.2": "§aRising before the morning dew sets violates the laws of nature!",
+  "quirk.toneko.crystal_neko.sleep.stop.night.3": "§aForcing yourself awake will trigger the compulsory face-licking program!",
+  "quirk.toneko.crystal_neko.sleep.stop.night.4": "§aAbnormal neural activity detected—please go back to sleep!",
+  "quirk.toneko.crystal_neko.sleep.stop.day.0": "§aThe good morning kiss coupon expired three minutes ago!",
+  "quirk.toneko.crystal_neko.sleep.stop.day.1": "§aYour ankle has just entered my approved wake-up zone!",
+  "quirk.toneko.crystal_neko.sleep.stop.day.2": "§aThe angle of the sunlight is perfect for grooming!",
+  "quirk.toneko.crystal_neko.sleep.stop.day.3": "§aGood morning! The countdown for today's survival time has begun!",
+  "quirk.toneko.crystal_neko.sleep.stop.day.4": "§aMorning news has switched to the bird chirping channel!",
   "quirk.toneko.zako": "zako",
   "quirk.toneko.zako.des": "♡zako zako～♡",
   "quirk.toneko.zako.damage.critical.0": "§cOh no, you can't even protect yourself? How pathetic!",
@@ -131,6 +161,36 @@
   "quirk.toneko.zako.attack.dead.2": "§cZako's blood everywhere~ my compost!",
   "quirk.toneko.zako.attack.dead.3": "§cNext time... use your sad zako attacks to entertain me~♡",
   "quirk.toneko.zako.attack.dead.4": "§cRandom win? Hmph~ did I underestimate you?",
+  "quirk.toneko.zako.weather.rain.0": "§cThe sound of rain drowns out zako's panting~ if you're begging for mercy, speak up louder!",
+  "quirk.toneko.zako.weather.rain.1": "§cThe rain flowing along the knife's edge resembles the tears of zako that haven't yet dried.",
+  "quirk.toneko.zako.weather.rain.2": "§cIs that rain cried out by zako? Even the dark clouds outlast you.",
+  "quirk.toneko.zako.weather.rain.3": "§cAnts struggling in a puddle~ a miniature reflection of zako's life.",
+  "quirk.toneko.zako.weather.rain.4": "§cLet the soaked bandages be wrapped even tighter~ that's the asphyxiation method of hemostasis.",
+  "quirk.toneko.zako.weather.thunder.0": "§cThe thundercloud is mimicking zako's expression~ twisted and perfectly done.",
+  "quirk.toneko.zako.weather.thunder.1": "§cThe lightning rod impales zako's spine~ serving as a conductor for heavenly retribution.",
+  "quirk.toneko.zako.weather.thunder.2": "§cLightning splits zako's shadow~ and its soul is getting zapped.",
+  "quirk.toneko.zako.weather.thunder.3": "§cThe electromagnetic field is interfering with the heartbeat~ should we switch to vibration mode?",
+  "quirk.toneko.zako.weather.thunder.4": "§cThe charred ring of grass from a lightning strike is just perfect as zako's death ring.",
+  "quirk.toneko.zako.weather.sunny.0": "§cUltraviolet rays burn the wounds~ turning zako into human-shaped bacon.",
+  "quirk.toneko.zako.weather.sunny.1": "§cThe sight of fleeing clouds~ just like zako calling for help.",
+  "quirk.toneko.zako.weather.sunny.2": "§cGood weather pairs best with screams~ how about another death aria?",
+  "quirk.toneko.zako.weather.sunny.3": "§cSunlight penetrates the skin~ revealing the crude maze of zako's blood vessels.",
+  "quirk.toneko.zako.weather.sunny.4": "§cThe sun is overseeing the execution from the sidelines, giving zako a chase spotlight.",
+  "quirk.toneko.zako.sleep.start.0": "§cThe way zako curls up in bed~ like maggots burrowing into decaying flesh",
+  "quirk.toneko.zako.sleep.start.1": "§cThe depth of the pillow's indentation~ just enough to fill your brain capacity",
+  "quirk.toneko.zako.sleep.start.2": "§cCounting sheep before sleep? Better count how many breaths you have left~",
+  "quirk.toneko.zako.sleep.start.3": "§cThe darkness is caressing you~ gentler than my touch, isn't it?",
+  "quirk.toneko.zako.sleep.start.4": "§cCurled up in a fetal position~ wanna be reborn as a qualified toy?",
+  "quirk.toneko.zako.sleep.stop.night.0": "§cCold sweat at 3 AM~ zako's fear is fermenting, oh",
+  "quirk.toneko.zako.sleep.stop.night.1": "§cYou woke up suddenly because~ I was choking you in my dream",
+  "quirk.toneko.zako.sleep.stop.night.2": "§cThe trembling frequency reached me~ inferior massager",
+  "quirk.toneko.zako.sleep.stop.night.3": "§cHearing things? That's the sound of me sharpening my fangs, oh",
+  "quirk.toneko.zako.sleep.stop.night.4": "§cYour eyeballs are bloodshot in the dark, right? Like rotten cherries",
+  "quirk.toneko.zako.sleep.stop.day.0": "§cYour eyelashes are crusted with blood scabs~ like a spiderweb soaked in dew",
+  "quirk.toneko.zako.sleep.stop.dat.1": "§cGood morning kiss~ is it okay to brand your collarbone with a branding iron?",
+  "quirk.toneko.zako.sleep.stop.day.2": "§cYour tousled hair stands prouder than zako's dignity",
+  "quirk.toneko.zako.sleep.stop.day.3": "§cThe outline of your stretching ribs~ perfect for carving into a work of art",
+  "quirk.toneko.zako.sleep.stop.day.4": "§cYour bed-ridden look~ like a dying fish washed ashore",
   "moe.toneko.tsundere": "tsundere",
   "moe.toneko.baka": "baka",
   "moe.toneko.mesugaki": "mesugaki",
