--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -79,6 +79,36 @@
   "quirk.toneko.crystal_neko.attack.dead.2": "§a凯旋后…勉强允许你吸肚皮三秒",
   "quirk.toneko.crystal_neko.attack.dead.3": "§a胜利报告要用肉球墨水书写",
   "quirk.toneko.crystal_neko.attack.dead.4": "§a史诗记载「那日他戴着我的领结」",
+  "quirk.toneko.crystal_neko.weather.rain.0": "§a窗边水痕比我舔毛还乱…不准叹气！",
+  "quirk.toneko.crystal_neko.weather.rain.1": "§a雷声传来前…尾巴借你抱三秒钟",
+  "quirk.toneko.crystal_neko.weather.rain.2": "§a这种天气最适合策划统治地球喵～",
+  "quirk.toneko.crystal_neko.weather.rain.3": "§a雨声像在敲猫碗…才没有饿的意思！",
+  "quirk.toneko.crystal_neko.weather.rain.4": "§a踩水坑的蠢样绝对会拍下来当屏保",
+  "quirk.toneko.crystal_neko.weather.thunder.0": "§a雷声震动频率影响我呼噜声精度了！",
+  "quirk.toneko.crystal_neko.weather.thunder.1": "§a电磁场紊乱时…勉强允许你握爪",
+  "quirk.toneko.crystal_neko.weather.thunder.2": "§a天地在玩激光笔？幼稚但有点意思",
+  "quirk.toneko.crystal_neko.weather.thunder.3": "§a世界要毁灭也得先给我开罐头啊！",
+  "quirk.toneko.crystal_neko.weather.thunder.4": "§a避雷针顶端该放我的铜像才有效",
+  "quirk.toneko.crystal_neko.weather.sunny.0": "§a紫外线超标！快给我涂爪爪防晒霜",
+  "quirk.toneko.crystal_neko.weather.sunny.1": "§a蓝天饱和度调太高了…刺眼！",
+  "quirk.toneko.crystal_neko.weather.sunny.2": "§a这种天气…勉强和你共享窗台啦～",
+  "quirk.toneko.crystal_neko.weather.sunny.3": "§a云朵形状像没撕好的鸡胸肉差评",
+  "quirk.toneko.crystal_neko.weather.sunny.4": "§a光合作用时间到～尾巴进行充电",
+  "quirk.toneko.crystal_neko.sleep.start.0": "§a梦境内容要经过喵星审核哦",
+  "quirk.toneko.crystal_neko.sleep.start.1": "§a被窝温度比我爪垫低0.5度不合格",
+  "quirk.toneko.crystal_neko.sleep.start.2": "§a说晚安前先交今日份的摸头税",
+  "quirk.toneko.crystal_neko.sleep.start.3": "§a辗转反侧超三次就发动踩奶攻击",
+  "quirk.toneko.crystal_neko.sleep.start.4": "§a人类作息表该点「熄灯」了喵",
+  "quirk.toneko.crystal_neko.sleep.stop.night.0": "§a猎户座尚在值班你竟敢起床！",
+  "quirk.toneko.crystal_neko.sleep.stop.night.1": "§a最后通牒——钻回我的尾巴圈！",
+  "quirk.toneko.crystal_neko.sleep.stop.night.2": "§a晨露未凝时起床违反自然法则",
+  "quirk.toneko.crystal_neko.sleep.stop.night.3": "§a强行开机将启动强制舔脸程序",
+  "quirk.toneko.crystal_neko.sleep.stop.night.4": "§a神经突触活跃度异常请回炉重睡",
+  "quirk.toneko.crystal_neko.sleep.stop.day.0": "§a早安吻兑换券已过期三分钟",
+  "quirk.toneko.crystal_neko.sleep.stop.day.1": "§a脚踝刚刚踏入我批准的起床区域",
+  "quirk.toneko.crystal_neko.sleep.stop.day.2": "§a日光倾斜角达最佳舔毛标准",
+  "quirk.toneko.crystal_neko.sleep.stop.day.3": "§a早安！今日幸存时长开始倒数啦",
+  "quirk.toneko.crystal_neko.sleep.stop.day.4": "§a晨间新闻切换成鸟叫频道啦",
   "quirk.toneko.zako": "杂鱼",
   "quirk.toneko.zako.des": "♡杂鱼杂鱼～♡",
   "quirk.toneko.zako.damage.critical.0": "§c诶呀，你怎么连自己都保护不好呀，也太菜了吧～",
@@ -126,11 +156,41 @@
   "quirk.toneko.zako.attack.critical.2": "§c冲击波震碎眼膜了~世界变成血红滤镜哟",
   "quirk.toneko.zako.attack.critical.3": "§c心脏被刺穿还在动~像捏烂的番茄在抽搐",
   "quirk.toneko.zako.attack.critical.4": "§c剑插着心脏举高高~杂鱼版人体旗帜呢",
-  "quirk.toneko.zako.attack.dead.0": "§a好叭好叭，算你厉害～",
-  "quirk.toneko.zako.attack.dead.1": "§a杂鱼颤抖的致命一击...像告白的力度呢",
-  "quirk.toneko.zako.attack.dead.2": "§a杂鱼的血肉开花啦~是我专属的腐殖质哦",
-  "quirk.toneko.zako.attack.dead.3": "§a下次进攻时...请继续用杂鱼的可悲攻击取悦我吧~♡",
-  "quirk.toneko.zako.attack.dead.4": "§a偶然的胜利吗？哼~ 是我低估了你的实力吗？",
+  "quirk.toneko.zako.attack.dead.0": "§c好叭好叭，算你厉害～",
+  "quirk.toneko.zako.attack.dead.1": "§c杂鱼颤抖的致命一击...像告白的力度呢",
+  "quirk.toneko.zako.attack.dead.2": "§c杂鱼的血肉开花啦~是我专属的腐殖质哦",
+  "quirk.toneko.zako.attack.dead.3": "§c下次进攻时...请继续用杂鱼的可悲攻击取悦我吧~♡",
+  "quirk.toneko.zako.attack.dead.4": "§c偶然的胜利吗？哼~ 是我低估了你的实力吗？",
+  "quirk.toneko.zako.weather.rain.0": "§c雨声盖过杂鱼喘息了~求饶要大声点呀",
+  "quirk.toneko.zako.weather.rain.1": "§c顺着刀刃流下的雨~像杂鱼未流干的泪",
+  "quirk.toneko.zako.weather.rain.2": "§c杂鱼哭出来的雨吗？连乌云都比你持久呢",
+  "quirk.toneko.zako.weather.rain.3": "§c水洼里挣扎的蚂蚁~像杂鱼的人生缩影哦",
+  "quirk.toneko.zako.weather.rain.4": "§c湿透的绷带缠更紧吧~窒息式止血法呢",
+  "quirk.toneko.zako.weather.thunder.0": "§c雷暴云在模仿杂鱼表情~扭曲得真传神",
+  "quirk.toneko.zako.weather.thunder.1": "§c避雷针插进杂鱼脊椎~引天罚的导体呢",
+  "quirk.toneko.zako.weather.thunder.2": "§c闪电劈开杂鱼的影子啦~灵魂在漏电呢",
+  "quirk.toneko.zako.weather.thunder.3": "§c电磁场干扰心跳了~要调成震动模式吗？",
+  "quirk.toneko.zako.weather.thunder.4": "§c落雷烧焦的草圈~刚好当杂鱼的墓环",
+  "quirk.toneko.zako.weather.sunny.0": "§c紫外线灼烧伤口~杂鱼变成人形培根啦",
+  "quirk.toneko.zako.weather.sunny.1": "§c云朵逃跑的样子~和杂鱼求援时好像",
+  "quirk.toneko.zako.weather.sunny.2": "§c好天气和惨叫最配~再来段死亡咏叹调？",
+  "quirk.toneko.zako.weather.sunny.3": "§c日光照透皮肤~杂鱼的血管迷宫好简陋",
+  "quirk.toneko.zako.weather.sunny.4": "§c日轮在围观处刑哦~给杂鱼打追光灯呢",
+  "quirk.toneko.zako.sleep.start.0": "§c杂鱼缩进被窝的样子~像蛆虫钻入腐肉呢",
+  "quirk.toneko.zako.sleep.start.1": "§c枕头凹陷的深度~刚好填满你的脑容量",
+  "quirk.toneko.zako.sleep.start.2": "§c睡前数羊？不如数你还能呼吸的次数~",
+  "quirk.toneko.zako.sleep.start.3": "§c黑暗在抚摸你哟~比我的手法更温柔对吧？",
+  "quirk.toneko.zako.sleep.start.4": "§c蜷缩成胎儿姿势~想重生为合格玩具吗？",
+  "quirk.toneko.zako.sleep.stop.night.0": "§c凌晨三点的冷汗~杂鱼的恐惧在发酵哦",
+  "quirk.toneko.zako.sleep.stop.night.1": "§c突然惊醒是因为~我在梦里掐你喉咙呀",
+  "quirk.toneko.zako.sleep.stop.night.2": "§c颤抖震频传到我这儿了~劣质按摩棒",
+  "quirk.toneko.zako.sleep.stop.night.3": "§c幻听吗？那是我在磨獠牙的声音哦",
+  "quirk.toneko.zako.sleep.stop.night.4": "§c眼球在黑暗中充血了吧？像腐烂樱桃",
+  "quirk.toneko.zako.sleep.stop.day.0": "§c睫毛结满血痂~像沾露水的蜘蛛网哟",
+  "quirk.toneko.zako.sleep.stop.dat.1": "§c早安吻~用烙铁在锁骨盖章可以吗？",
+  "quirk.toneko.zako.sleep.stop.day.2": "§c睡翘的头发~比杂鱼的尊严更挺立呢",
+  "quirk.toneko.zako.sleep.stop.day.3": "§c伸懒腰的肋骨轮廓~适合雕刻成艺术品",
+  "quirk.toneko.zako.sleep.stop.day.4": "§c赖床的模样~像被冲上岸的濒死鱼",
   "moe.toneko.tsundere": "傲娇",
   "moe.toneko.baka": "笨蛋",
   "moe.toneko.mesugaki": "雌小鬼",
