--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -79,6 +79,36 @@
   "quirk.toneko.crystal_neko.attack.dead.2": "§a凱旋後…勉強允許你吸肚皮三秒",
   "quirk.toneko.crystal_neko.attack.dead.3": "§a勝利報告要用肉球墨水書寫",
   "quirk.toneko.crystal_neko.attack.dead.4": "§a史詩記載「那日他戴着我的領結」",
+  "quirk.toneko.crystal_neko.weather.rain.0": "§a窗邊水痕比我舔毛還亂…不准嘆氣！",
+  "quirk.toneko.crystal_neko.weather.rain.1": "§a雷聲傳來前…尾巴借你抱三秒鐘",
+  "quirk.toneko.crystal_neko.weather.rain.2": "§a這種天氣最適合策劃統治地球喵～",
+  "quirk.toneko.crystal_neko.weather.rain.3": "§a雨聲像在敲貓碗…才沒有餓的意思！",
+  "quirk.toneko.crystal_neko.weather.rain.4": "§a踩水坑的蠢樣絕對會拍下來當屏保",
+  "quirk.toneko.crystal_neko.weather.thunder.0": "§a雷聲震動頻率影響我呼嚕聲精度了！",
+  "quirk.toneko.crystal_neko.weather.thunder.1": "§a電磁場紊亂時…勉強允許你握爪",
+  "quirk.toneko.crystal_neko.weather.thunder.2": "§a天地在玩雷射筆？幼稚但有點意思",
+  "quirk.toneko.crystal_neko.weather.thunder.3": "§a世界要毀滅也得先給我開罐頭啊！",
+  "quirk.toneko.crystal_neko.weather.thunder.4": "§a避雷針頂端該放我的銅像才有效",
+  "quirk.toneko.crystal_neko.weather.sunny.0": "§a紫外線超標！快給我塗爪爪防曬霜",
+  "quirk.toneko.crystal_neko.weather.sunny.1": "§a藍天飽和度調太高了…刺眼！",
+  "quirk.toneko.crystal_neko.weather.sunny.2": "§a這種天氣…勉強和你共享窗台啦～",
+  "quirk.toneko.crystal_neko.weather.sunny.3": "§a雲朵形狀像沒撕好的雞胸肉差評",
+  "quirk.toneko.crystal_neko.weather.sunny.4": "§a光合作用時間到～尾巴進行充電",
+  "quirk.toneko.crystal_neko.sleep.start.0": "§a夢境內容要經過喵星審核喔",
+  "quirk.toneko.crystal_neko.sleep.start.1": "§a被窩溫度比我爪墊低0.5度不合格",
+  "quirk.toneko.crystal_neko.sleep.start.2": "§a說晚安前先交今日份的摸頭稅",
+  "quirk.toneko.crystal_neko.sleep.start.3": "§a輾轉反側超三次就發動踩奶攻擊",
+  "quirk.toneko.crystal_neko.sleep.start.4": "§a人類作息表該點「熄燈」了喵",
+  "quirk.toneko.crystal_neko.sleep.stop.night.0": "§a獵戶座尚在值班你竟敢起床！",
+  "quirk.toneko.crystal_neko.sleep.stop.night.1": "§a最後通牒——鑽回我的尾巴圈！",
+  "quirk.toneko.crystal_neko.sleep.stop.night.2": "§a晨露未凝時起床違反自然法則",
+  "quirk.toneko.crystal_neko.sleep.stop.night.3": "§a強行開機將啟動強制舔臉程序",
+  "quirk.toneko.crystal_neko.sleep.stop.night.4": "§a神經突觸活躍度異常請回爐重睡",
+  "quirk.toneko.crystal_neko.sleep.stop.day.0": "§a早安吻兌換券已過期三分鐘",
+  "quirk.toneko.crystal_neko.sleep.stop.day.1": "§a腳踝剛剛踏入我批准的起床區域",
+  "quirk.toneko.crystal_neko.sleep.stop.day.2": "§a日光傾斜角達最佳舔毛標準",
+  "quirk.toneko.crystal_neko.sleep.stop.day.3": "§a早安！今日幸存時長開始倒數囉",
+  "quirk.toneko.crystal_neko.sleep.stop.day.4": "§a晨間新聞切換成鳥叫頻道囉",
   "quirk.toneko.zako": "雑魚",
   "quirk.toneko.zako.des": "♡雑魚雑魚～♡",
   "quirk.toneko.zako.damage.critical.0": "§c誒呀，你怎麼連自己都保護不起呀，也太菜了吧～",
@@ -126,11 +156,41 @@
   "quirk.toneko.zako.attack.critical.2": "§c衝擊波震碎眼膜了~世界變成血紅濾鏡囉",
   "quirk.toneko.zako.attack.critical.3": "§c心臟被刺穿還在動~像捏爛的番茄在抽搐",
   "quirk.toneko.zako.attack.critical.4": "§c劍插着心臟舉高高~雑魚版人體旗幟呢",
-  "quirk.toneko.zako.attack.dead.0": "§a好叭好叭，算你厲害～",
+  "quirk.toneko.zako.attack.dead.0": "§c好叭好叭，算你厲害～",
   "quirk.toneko.zako.attack.dead.1": "§c雑魚的颤抖致命一擊...像告白的力度呢",
   "quirk.toneko.zako.attack.dead.2": "§c雑魚的血肉開花啦~是我專屬的腐殖質哦",
   "quirk.toneko.zako.attack.dead.3": "§c下次進攻時...請繼續用雑魚的可悲攻擊取悦我吧~♡",
   "quirk.toneko.zako.attack.dead.4": "§c偶然的勝利嗎？唼~ 是我低估了你的實力嗎？",
+  "quirk.toneko.zako.weather.rain.0": "§c雨聲蓋過雜魚喘息了~求饒要大聲點呀",
+  "quirk.toneko.zako.weather.rain.1": "§c順著刀刃流下的雨~像雜魚未流乾的淚",
+  "quirk.toneko.zako.weather.rain.2": "§c雜魚哭出來的雨嗎？連烏雲都比你持久呢",
+  "quirk.toneko.zako.weather.rain.3": "§c水窪裡掙扎的螞蟻~像雜魚的人生縮影哦",
+  "quirk.toneko.zako.weather.rain.4": "§c濕透的繃帶纏更緊吧~窒息式止血法呢",
+  "quirk.toneko.zako.weather.thunder.0": "§c雷暴雲在模仿雜魚表情~扭曲得真傳神",
+  "quirk.toneko.zako.weather.thunder.1": "§c避雷針插進雜魚脊椎~引天罰的導體呢",
+  "quirk.toneko.zako.weather.thunder.2": "§c閃電劈開雜魚的影子啦~靈魂在漏電呢",
+  "quirk.toneko.zako.weather.thunder.3": "§c電磁場干擾心跳了~要調成震動模式嗎？",
+  "quirk.toneko.zako.weather.thunder.4": "§c落雷燒焦的草圈~剛好當雜魚的墓環",
+  "quirk.toneko.zako.weather.sunny.0": "§c紫外線灼燒傷口~雜魚變成人形培根啦",
+  "quirk.toneko.zako.weather.sunny.1": "§c雲朵逃跑的樣子~和雜魚求援時好像",
+  "quirk.toneko.zako.weather.sunny.2": "§c好天氣和慘叫最配~再來段死亡詠嘆調？",
+  "quirk.toneko.zako.weather.sunny.3": "§c日光照透皮膚~雜魚的血管迷宮好簡陋",
+  "quirk.toneko.zako.weather.sunny.4": "§c日輪在圍觀處刑哦~給雜魚打追光燈呢",
+  "quirk.toneko.zako.sleep.start.0": "§c雜魚縮進被窩的樣子~像蛆蟲鑽入腐肉呢",
+  "quirk.toneko.zako.sleep.start.1": "§c枕頭凹陷的深度~剛好填滿你的腦容量",
+  "quirk.toneko.zako.sleep.start.2": "§c睡前數羊？不如數你還能呼吸的次數~",
+  "quirk.toneko.zako.sleep.start.3": "§c黑暗在撫摸你喲~比我的手法更溫柔對吧？",
+  "quirk.toneko.zako.sleep.start.4": "§c蜷縮成胎兒姿勢~想重生為合格玩具嗎？",
+  "quirk.toneko.zako.sleep.stop.night.0": "§c凌晨三點的冷汗~雜魚的恐懼在發酵哦",
+  "quirk.toneko.zako.sleep.stop.night.1": "§c突然驚醒是因為~我在夢裡掐你喉嚨呀",
+  "quirk.toneko.zako.sleep.stop.night.2": "§c顫抖震頻傳到我這兒了~劣質按摩棒",
+  "quirk.toneko.zako.sleep.stop.night.3": "§c幻聽嗎？那是我在磨獠牙的聲音哦",
+  "quirk.toneko.zako.sleep.stop.night.4": "§c眼球在黑暗中充血了吧？像腐爛櫻桃",
+  "quirk.toneko.zako.sleep.stop.day.0": "§c睫毛結滿血痂~像沾露水的蜘蛛網喲",
+  "quirk.toneko.zako.sleep.stop.dat.1": "§c早安吻~用烙鐵在鎖骨蓋章可以嗎？",
+  "quirk.toneko.zako.sleep.stop.day.2": "§c睡翹的頭髮~比雜魚的尊嚴更挺立呢",
+  "quirk.toneko.zako.sleep.stop.day.3": "§c伸懶腰的肋骨輪廓~適合雕刻成藝術品",
+  "quirk.toneko.zako.sleep.stop.day.4": "§c賴床的模樣~像被沖上岸的瀕死魚",
   "moe.toneko.tsundere": "傲娇",
   "moe.toneko.baka": "笨蛋",
   "moe.toneko.mesugaki": "雌小鬼",
