--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -448,10 +448,16 @@
   "screen.toneko.config.key.chat.format.des": "你可以修改聊天格式,%name%=玩家名称,%msg%=玩家消息,%prefix%=前缀",
   "screen.toneko.config.key.ai.enable": "启用猫娘AI",
   "screen.toneko.config.key.ai.enable.des": "你可以在游戏中与猫娘进行聊天哦",
+  "screen.toneko.config.key.ai.model": "AI模型",
+  "screen.toneko.config.key.ai.model.des": "AI使用的模型",
   "screen.toneko.config.key.ai.key": "AI API密钥",
   "screen.toneko.config.key.ai.key.des": "Gemini的API密钥§o(点击可以查看详细信息哦)",
   "screen.toneko.config.key.ai.prompt": "AI提示词",
   "screen.toneko.config.key.ai.prompt.des": "想必不用咱多说了叭§o(点击可以查看详细信息哦)",
+  "screen.toneko.config.key.ai.proxy.ip": "代理ip(可选)",
+  "screen.toneko.config.key.ai.proxy.ip.des": "Http代理ip(不使用请留空哦)",
+  "screen.toneko.config.key.ai.proxy.port": "Http代理端口(可选)",
+  "screen.toneko.config.key.ai.proxy.port.des": "Http代理端口(不使用请留空哦)",
   "screen.toneko.config.key.stats": "启用猫猫统计",
   "screen.toneko.config.key.stats.des": "这是猫猫的统计系统",
   "screen.toneko.config.button.quit": "我改好啦",
