完善配置页面

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -442,16 +442,24 @@
   "screen.toneko.config.button.false": "§cDisable",
   "screen.toneko.config.key.language": "Language",
   "screen.toneko.config.key.language.des": "Can be set to zh_cn, zh_tw, en_us (only affects a small amount of text)",
-  "screen.toneko.config.key.chat.enable": "Enable chat modification",
-  "screen.toneko.config.key.chat.enable.des": "This will modify your chat. If you don't like it, just turn it off",
-  "screen.toneko.config.key.chat.format": "Chat format",
-  "screen.toneko.config.key.chat.format.des": "You can modify the chat format, %name%=player name, %msg%=player message, %prefix%=prefix",
-  "screen.toneko.config.key.ai.enable": "Enable neko AI",
-  "screen.toneko.config.key.ai.enable.des": "You can chat with neko in the game",
-  "screen.toneko.config.key.ai.key": "AI API key",
-  "screen.toneko.config.key.ai.key.des": "Gemini's API key§o(click to view details)",
-  "screen.toneko.config.key.ai.prompt": "AI prompt",
-  "screen.toneko.config.key.ai.prompt.des": "I don't think we need to say more§o(click to view details)",
+  "screen.toneko.config.key.chat.enable": "Enable Chat Modification",
+  "screen.toneko.config.key.chat.enable.des": "This will modify your chat. If you don't like it, just turn it off!",
+  "screen.toneko.config.key.chat.format": "Chat Format",
+  "screen.toneko.config.key.chat.format.des": "You can modify the chat format, %name%=Player Name, %msg%=Player Message, %prefix%=Prefix",
+  "screen.toneko.config.key.ai.enable": "Enable Neko AI",
+  "screen.toneko.config.key.ai.enable.des": "You can chat with Neko in the game!",
+  "screen.toneko.config.key.ai.model": "AI Model",
+  "screen.toneko.config.key.ai.model.des": "The AI model in use",
+  "screen.toneko.config.key.ai.key": "AI API Key",
+  "screen.toneko.config.key.ai.key.des": "API Key §o(Click to view details)",
+  "screen.toneko.config.key.ai.prompt": "AI Prompt",
+  "screen.toneko.config.key.ai.prompt.des": "No need for me to explain, right? §o(Click to view details)",
+  "screen.toneko.config.key.ai.proxy.enable": "Enable HTTP Proxy",
+  "screen.toneko.config.key.ai.proxy.enable.des": "After enabling, AI",
+  "screen.toneko.config.key.ai.proxy.ip": "Proxy IP",
+  "screen.toneko.config.key.ai.proxy.ip.des": "HTTP Proxy IP",
+  "screen.toneko.config.key.ai.proxy.port": "HTTP Proxy Port",
+  "screen.toneko.config.key.ai.proxy.port.des": "HTTP Proxy Port",
   "screen.toneko.config.key.stats": "Enable cat statistics",
   "screen.toneko.config.key.stats.des": "This is the cat statistics system",
   "screen.toneko.config.button.quit": "I have changed it",
