--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -451,15 +451,20 @@
   "screen.toneko.config.key.ai.model": "AI模型",
   "screen.toneko.config.key.ai.model.des": "AI使用的模型",
   "screen.toneko.config.key.ai.key": "AI API密钥",
-  "screen.toneko.config.key.ai.key.des": "Gemini的API密钥§o(点击可以查看详细信息哦)",
+  "screen.toneko.config.key.ai.key.des": "API密钥§o(点击可以查看详细信息哦)",
   "screen.toneko.config.key.ai.prompt": "AI提示词",
   "screen.toneko.config.key.ai.prompt.des": "想必不用咱多说了叭§o(点击可以查看详细信息哦)",
-  "screen.toneko.config.key.ai.proxy.ip": "代理ip(可选)",
-  "screen.toneko.config.key.ai.proxy.ip.des": "Http代理ip(不使用请留空哦)",
-  "screen.toneko.config.key.ai.proxy.port": "Http代理端口(可选)",
-  "screen.toneko.config.key.ai.proxy.port.des": "Http代理端口(不使用请留空哦)",
+  "screen.toneko.config.key.ai.proxy.enable": "启用http代理",
+  "screen.toneko.config.key.ai.proxy.enable.des": "启用后AI",
+  "screen.toneko.config.key.ai.proxy.ip": "代理ip",
+  "screen.toneko.config.key.ai.proxy.ip.des": "Http代理ip",
+  "screen.toneko.config.key.ai.proxy.port": "Http代理端口",
+  "screen.toneko.config.key.ai.proxy.port.des": "Http代理端口",
   "screen.toneko.config.key.stats": "启用猫猫统计",
   "screen.toneko.config.key.stats.des": "这是猫猫的统计系统",
+  "screen.toneko.config.group.chat": "聊天",
+  "screen.toneko.config.group.ai": "AI",
+  "screen.toneko.config.group.proxy": "代理",
   "screen.toneko.config.button.quit": "我改好啦",
   "screen.toneko.config.button.apply": "马上生效",
   "screen.toneko.config.button.random": "换一个",
