--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -441,17 +441,25 @@
   "screen.toneko.config.button.true": "§a啟用",
   "screen.toneko.config.button.false": "§c停用",
   "screen.toneko.config.key.language": "語言",
-  "screen.toneko.config.key.language.des": "可以設定為zh_cn，zh_tw，en_us（只會影響少量文字哦）",
+  "screen.toneko.config.key.language.des": "可以設定為zh_cn，zh_tw，en_us（只會影響少量文本哦）",
   "screen.toneko.config.key.chat.enable": "啟用聊天修改",
   "screen.toneko.config.key.chat.enable.des": "這樣你的聊天就會被修改，如果不喜歡的話呢，就把它關掉吧",
   "screen.toneko.config.key.chat.format": "聊天格式",
-  "screen.toneko.config.key.chat.format.des": "你可以修改聊天格式,%name%=玩家名稱,%msg%=玩家訊息,%prefix%=前綴",
+  "screen.toneko.config.key.chat.format.des": "你可以修改聊天格式,%name%=玩家名稱,%msg%=玩家消息,%prefix%=前綴",
   "screen.toneko.config.key.ai.enable": "啟用貓娘AI",
-  "screen.toneko.config.key.ai.enable.des": "你可以在遊戲中與貓娘聊天哦",
-  "screen.toneko.config.key.ai.key": "AI API金鑰",
-  "screen.toneko.config.key.ai.key.des": "Gemini的API金鑰§o(點選可以查看詳細資料)",
-  "screen.toneko.config.key.ai.prompt": "AI提示字",
-  "screen.toneko.config.key.ai.prompt.des": "想必不用咱多說了§o(點擊可以查看詳細信息哦)",
+  "screen.toneko.config.key.ai.enable.des": "你可以在遊戲中與貓娘進行聊天哦",
+  "screen.toneko.config.key.ai.model": "AI模型",
+  "screen.toneko.config.key.ai.model.des": "AI使用的模型",
+  "screen.toneko.config.key.ai.key": "AI API密鑰",
+  "screen.toneko.config.key.ai.key.des": "API密鑰§o(點擊可以查看詳細資訊哦)",
+  "screen.toneko.config.key.ai.prompt": "AI提示詞",
+  "screen.toneko.config.key.ai.prompt.des": "想必不用咱多說了吧§o(點擊可以查看詳細資訊哦)",
+  "screen.toneko.config.key.ai.proxy.enable": "啟用http代理",
+  "screen.toneko.config.key.ai.proxy.enable.des": "啟用後AI",
+  "screen.toneko.config.key.ai.proxy.ip": "代理ip",
+  "screen.toneko.config.key.ai.proxy.ip.des": "Http代理ip",
+  "screen.toneko.config.key.ai.proxy.port": "Http代理端口",
+  "screen.toneko.config.key.ai.proxy.port.des": "Http代理端口",
   "screen.toneko.config.key.stats": "啟用貓貓統計",
   "screen.toneko.config.key.stats.des": "這是貓貓的統計系統",
   "screen.toneko.config.button.quit": "我改囉",
